<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_sms_tracker"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/card_main_actions"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="32dp"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_main_actions"
        style="?attr/materialCardViewFilledStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_title"
        app:layout_constraintBottom_toTopOf="@+id/button_view_all_transactions" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quick_start"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_go_to_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_transaction"
                app:icon="@drawable/outline_attach_money_24"
                style="@style/Widget.Material3.Button.Icon" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_view_all_transactions"
        style="@style/Widget.Material3.Button.TonalButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/view_all_transactions"
        app:icon="@drawable/baseline_history_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_main_actions"
        app:layout_constraintBottom_toTopOf="@+id/textView_setup_title"/>

    <TextView
        android:id="@+id/textView_setup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_permissions"
        android:textAppearance="?attr/textAppearanceTitleSmall"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintBottom_toTopOf="@id/button_enable_sms_feature"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_enable_sms_feature"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enable_sms_permissions"
        app:icon="@drawable/baseline_history_24"
        app:layout_constraintBottom_toTopOf="@id/your_button_to_enable_notifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/your_button_to_enable_notifications"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enable_notifications"
        app:icon="@drawable/outline_circle_notifications_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>